--- a/.gitignore
+++ b/.gitignore
@@ -12,24 +12,7 @@ zestaw7/bin/bin/bin
 zestaw7/bin/in.txt
 zestaw7/stamp/bin/stamp
 zestaw7/stamp/in.txt
-.git/objects/0b/1a19220b3404cbff3001ddd20c2c2de7c223c4
-.git/HEAD
-.git/description
-.git/info/exclude
-.git/hooks/fsmonitor-watchman.sample
-.git/hooks/pre-rebase.sample
-.git/hooks/commit-msg.sample
-.git/hooks/prepare-commit-msg.sample
-.git/hooks/pre-push.sample
-.git/hooks/update.sample
-.git/hooks/pre-commit.sample
-.git/hooks/post-update.sample
-.git/hooks/pre-applypatch.sample
-.git/hooks/applypatch-msg.sample
-.git/hooks/pre-receive.sample
-.git/hooks/pre-merge-commit.sample
-.git/config
-.git/index
+.git
 .gitignore
 polecenia/tri.pdf
 polecenia/rom.pdf
